kubernetes/apps/games/factorio/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorio
  template:
    metadata:
      labels:
        app: factorio
    spec:
      containers:
        - name: factorio
          image: factoriotools/factorio:latest
          ports:
            - containerPort: 34197
              protocol: UDP
            - containerPort: 27015
              protocol: TCP
          volumeMounts:
            - name: factorio-data
              mountPath: /factorio
            - name: factorio-config
              mountPath: /factorio/config
      volumes:
        - name: factorio-data
          persistentVolumeClaim:
            claimName: factorio-data
        - name: factorio-config
          secret:
            secretName: factorio-config
