kubernetes/apps/games/factorio/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: factorio-service
spec:
  type: LoadBalancer
  ports:
    - name: game
      port: 34197
      protocol: UDP
      targetPort: 34197
    - name: ui
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: factorio
