kubernetes/apps/games/factorio/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorio-web
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: &host factorio.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: factorio-service
                port:
                  name: ui
          - path: /game
            pathType: Prefix
            backend:
              service:
                name: factorio-service
                port:
                  name: game
  tls:
    - hosts: [*host]
      secretName: factorio-tls
